# observix

./: .gitignore  Makefile  README.md  pyproject.toml
.deepeval/: .deepeval_telemetry.txt
demo/: comprehensive_evaluation.py  demo.py  demo_lg.py  eval.ipynb  media-agency_no_dec.py  media_agency.py  media_agency_azure.py  reset_db.py  test.py  test_evaluation.py  test_obseval.py  test_trace_eval.py  verify_trace_link.py
src/observix/: __init__.py  client.py  context.py  exporter.py  instrumentation.py  schema.py
src/observix/agents/: __init__.py  exceptions.py
src/observix/agents/integrations/: crewai.py  crewai_adapter.py  langgraph.py
src/observix/agents/llm/: base.py  factory.py
src/observix/agents/utils/: logging.py
src/observix/evaluation/: __init__.py  core.py  trace_utils.py
src/observix/evaluation/integrations/: deepeval.py  observix_eval copy.py  observix_eval.py  obseval.py  phoenix.py  prompts.py  ragas.py  test_trace_optimization.py  trace_sanitizer.py
src/observix/integrations/: groq.py  openai.py  openai_native.py
src/observix/llm/: factory.py
src/observix/llm/langchain/: __init__.py  chat_groq.py  chat_openai.py
src/observix/llm/openai/: __init__.py  chat_openai.py
src/observix/openai/: chat_openai.py
tests/: test_client.py  test_observability.py
